More detailed information about incremental changes can be found in the
history management of subversion.

2015-xx-yy releases/3.12.5
        - changed fptr from long to void*: the Fortran side needs to
          make sure that it uses a big enough integer type to store a
          C pointer, thus void* can be used on the C side [r2599]

2015-08-09 releases/3.12.4
        - option to use regularized Hessian when doing a curvature test
          without inertia information (neg_curv_test_tol > 0), new
          option neg_curv_test_reg to switch back to original behavior
          (by N.-Y. Chiang and V. Zavala Tejeda) [r2579]
        - sIpopt: Added access to sensitivity directional derivative
          vector (ds/dp*(p-p0) Eq. 14 sIpopt implementation paper). Also,
          added an option to compute the sensitivity matrix and provide
          access to it. Finally, added an example that shows how to
          access the new information. (by R. Lopez-Negrete)
        - use workaround for failing check for random number generator
          with any gcc 4.8.x (x >= 2)

2015-04-15 releases/3.12.3 and releases/3.11.11
        - fixed bug in MA97 interface that lead to conversion issues
          (by J. Hogg) [r2566, #260]

2015-04-04 releases/3.12.2
        - revised integration of doxygen documentation into build system
          (by T. Ralphs)

2015-02-13 releases/3.12.1
        - fixes to build system for dependency linking and library versioning
        - Ipopt will now report an NLP with inconsistent variable bounds
          or inconsistent constraints sides as infeasible instead of
          throwing an invalid TNLP exception (by T. Kelman) [r2548]

2015-01-23 releases/3.12.0
        - Library dependencies are now recorded in shared library builds,
          which is intended to simplify linking against the Ipopt library.
          However, the pkg-config and ipopt_addlibs files do not reflect