@@ -6,6 +6,8 @@ history management of subversion.
         - changed fptr from long to void*: the Fortran side needs to
           make sure that it uses a big enough integer type to store a
           C pointer, thus void* can be used on the C side [r2599]
+        - added parameter allow_clobber with default value false to
+          IpoptApplication::Initialize and OptionsList::ReadFromStream
 
 2015-08-09 releases/3.12.4
         - option to use regularized Hessian when doing a curvature test
